correction de fautes

--- a/piezo.html
+++ b/piezo.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+L'effet Seebeck<!DOCTYPE HTML>
 
 <html lang="fr">
 
@@ -22,7 +22,7 @@
                     <ul>
                         <li><a href="solar.html">Capteur Solaire</a></li>
                         <li><a href="piezo.html">Piezoélectricité</a></li>
-                        <li><a href="seebeck.html">L'effet seebeck</a></li>
+                        <li><a href="seebeck.html">L'effet Seebeck</a></li>
                     </ul>
                 </li>
                 <li><a href="journal.html">Carnet de Bord</a></li>
@@ -108,7 +108,7 @@
         <h4>Comment l'expérience à échouée</h4>
 
         <p>Après avoir fait le montage, Bilal a commencé à marcher pour faire l'expérience mais la centrale Latis restait déséspéremment à 0. Il s'avère que l'intensité est si faible que même avec une petite résistance de 10&Omega;, elle ne soit pas calculable
-            de la tension. Nous allons donc chercher une formule qui nous permettra de calculer une intensité.</p>
+            à partir de la tension. Nous allons donc chercher une formule qui nous permettra de calculer une intensité.</p>
         <hr/>
         <h3>Expérience 3</h3>
 
@@ -124,24 +124,22 @@
 
         <h4>Calculs</h4>
 
-        <p>On a F la pression appliquée par Bilal à chaque pas (la moitié de son poid) sur la surface de la cellule, d33 le coefficient piezoélectrique qui dépend du matériau de la cellule (ici du quartz) et Q la charge électrique générée par la contrainte
+        <p>On a F la pression appliquée par Bilal à chaque pas (on suppose qu'il applique la moitié de son poid) sur la surface de la cellule, d33 le coefficient piezoélectrique qui dépend du matériau de la cellule (ici du quartz) et Q la charge électrique générée par la contrainte
             mécanique.
-            <br/> Or comme nous l'ont appris les documents scientifiques (allez voir la bibliographie pour plus d'informations) :<br/> \(Q = d_{33} \times F\)<br/> On sait que \(F = {196.2N \over 2.8\times 10^{-15}m^2}\) et \(d_{33} = 2.33\times 10^{-12}\)<br/>            Par conséquent, dans le cas de Bilal, la charge en Coulombs générée par Bilal à chaque pas est de \(1.456\times 10^{-6}C\)<br/> Or \(1C = 1000mAs\) donc Bilal génère \(1.456\times 10^{-3}mAs\) ce qui nous fait donc à peu près \(5mAh\).<br/>            Ce résultat est absolument insignifiant, rendant l'utilisation de la piezo-électricité pour alimenter des objets connectés totalement inefficace</p>
+            <br/> Or comme nous l'ont appris les documents scientifiques (allez voir la bibliographie pour plus d'informations) :<br/> \(Q = d_{33} \times F\)<br/> On sait que \(F = {196.2N \over 2.8\times 10^{-15}m^2}\) et \(d_{33} = 2.33\times 10^{-12}\)<br/>            Par conséquent, dans le cas de Bilal, la charge en Coulombs générée par Bilal à chaque pas est de \(1.456\times 10^{-6}C\)<br/> Or \(1C = 1000mAs\) donc Bilal génère \(1.456\times 10^{-3}mAs\) ce qui nous fait donc à peu près \(5mAh\).<br/>            Ce résultat est absolument insignifiant, rendant l'utilisation de la piezo-électricité pour alimenter des objets connectés totalement inefficace.</p>
 
         <h3>Conclusion sur la piezoélectricité :</h3>
 
-        <p>Nous avons vu grâce à nos expériences que l'on peut en effet produire de l'énergie grâce à des cellules piézoélectriques. Cependant, elles sont trop peu efficaces afin d'être utilisées dans le cadre d'un usage personnel. Nous pouvons cependant
-            envisager l'utilisation de capacitors afin d'accumuler de l'énergie pour alimenter de manière ponctuelle un objet connecté.<br/> Pour aller plus loin, nous pourrions envisager des routes ou même un sol très fréquenté bardé de cellules piézoélectriques.
-            La contrainte mécanique d'une foule ou de plusieurs voitures serait suffisante afin d'alimenter des objets connectés ou même pour alimenter l'éclairage public.</p>
+        <p>Nous avons vu grâce à nos expériences que l'on peut en effet produire de l'énergie grâce à des cellules piézoélectriques. Cependant, la cellule testée est trop peu efficace afin d'être utilisée dans le cadre d'un usage personnel (marche). Sauf s'il est possible d'utiliser des cellules piézoélectriques avec un meilleur rendement (autres matériaux, autres dimensions...). Nous pouvons aussi
+            envisager l'utilisation de condensateurs afin d'accumuler de l'énergie pour alimenter de manière ponctuelle un objet connecté.<br/> Pour aller plus loin, nous pourrions imaginer d'autres conditions d'utilisations : par exemple des routes ou même un sol très fréquenté bardé de cellules piézoélectriques.
+            La contrainte mécanique d'une foule ou de plusieurs voitures serait peut-être suffisante afin d'alimenter des objets connectés.</p>
 
 
         <h3>Applications :</h3>
 
         <h4>Plaque terrestre</h4>
 
-        <p>Le principe est de placer une plaque possédant plein de cellules piézoélectriques en dessous afin de produire de l'énergie lorsque quelqu'un marche dessus. Pour maximiser son rendement, il faudrait la placer dans un passage très fréquenté. Les
-            cellules piézoélectriques ont un rendement bien trop faible pour un usage personnel ou pour un simple objet connecté dans une maison. Cependant, il peut être utilisé par la ville pour alimenter quelques services à l'aide des plaques que nous
-            vous avons présentées. Cela pourrait aussi servir à une entreprise (assez grande) ou même à un établissement, du moment qu'un passage est bien fréquenté pour que la plaque produise un bon rendement.</p>
+        <p>Le principe est de placer une plaque possédant plein de cellules piézoélectriques en dessous afin de produire de l'énergie lorsque quelqu'un marche dessus. Pour maximiser son rendement, il faudrait la placer dans un passage très fréquenté. Ces plaques pourraient peut-être être utilisées par la ville pour alimenter quelques services. Cela pourrait aussi servir à une entreprise (assez grande) ou même à un établissement, du moment qu'un passage est suffisamment fréquenté pour que la plaque produise une quantité d'électricité suffisante.</p>
 
         <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
 
