--- a/seebeck.html
+++ b/seebeck.html
@@ -22,7 +22,7 @@
                     <ul>
                         <li><a href="solar.html">Capteur Solaire</a></li>
                         <li><a href="piezo.html">Piezoélectricité</a></li>
-                        <li><a href="seebeck.html">L'effet seebeck</a></li>
+                        <li><a href="seebeck.html">L'effet Seebeck</a></li>
                     </ul>
                 </li>
                 <li><a href="journal.html">Carnet de Bord</a></li>
@@ -54,7 +54,7 @@
 
         <p>
             Le module à effet Seebeck permet de produire de l'énergie à partir d'une différence de température entre les deux faces du module. La face exposée à la plus grande température absorbe la chaleur et l'autre la rejette, ce processus génère un peu d'énergie
-            que l'on peut récupérer.<br/> On peut aussi alimenter le module, il absorbera la chaleur d'un coté et la rejettera de l'autre en fonction du sens du courant. Cependant, ce n'est pas ce que l'on cherche à faire ici (on veut récupérer
+            que l'on peut récupérer.<br/> On peut à l'inverse alimenter le module, il absorbera la chaleur d'un coté et la rejettera de l'autre en fonction du sens du courant. Cependant, ce n'est pas ce que l'on cherche à faire ici (on veut récupérer
             de l'énergie, pas l'utiliser).<br/>
         </p>
 
@@ -62,14 +62,14 @@
 
         <h3>Expérience 1</h3>
 
-        <p>Nous allons chercher une fonction qui à toute différence de température &Delta;T en Kelvin associe une tension U en Volt</p>
+        <p>Nous allons chercher une fonction qui à toute différence de température &Delta;T en Kelvin associe une tension U en volt.</p>
 
         <h4>Matériel :</h4>
 
         <p>x1 Chauffage<br/> x1 Module à effet Seebeck<br/> x1 bécher<br/> De l’eau du robinet<br/> x1 multimètre<br/> x1 dissipateur thermique (puissance max dissipée 65W) => Ventirad de PC<br/> x1 résistance de 10Ω
         </p>
 
-        <h4>Protocol Expérimental :</h4>
+        <h4>Protocole expérimental :</h4>
 
         <p>On fait chauffer de l’eau dans un bécher jusqu’à une température plus élevée que celle du milieu ambiant. Ensuite on immerge partiellement une face du module Seebeck dans l’eau pour faire chauffer l’une de ses deux faces. On utilise le dissipateur
             thermique pour refroidir l’autre face du Seebeck. De cette différence de température naît ainsi un courant électrique. Nous établissons alors un tableau qui, à toute différence de température &Delta;T, associe la tension U spécifiée en circuit
@@ -128,7 +128,7 @@
 
         <p>Nous allons chercher à calculer la résistance interne du module à effet Seebeck, cela nous aidera à trouver une fonction qui à toute tension U en Volt associe une intensité I en Ampère.</p>
 
-        <h4>Protocole Expérimental :</h4>
+        <h4>Protocole expérimental :</h4>
 
         <p>Nous refaisons le montage précédent en ajoutant un ampèremètre en série dans le circuit ainsi qu’une résistance de 10Ω. Nous allons calculer la résistance interne du module à effet Seebeck, ce qui nous permettra de trouver une fonction qui à toute
             tension U associe une intensité I. Nous utiliserons la relation \(U = R \times I\). Résultats : On sait que \(R=10+x\) où \(x\) représente la résistance interne du module à effet Seebeck et 10 la résistance déjà présente dans le circuit. De
