--- a/biblio.html
+++ b/biblio.html
@@ -22,7 +22,7 @@
                     <ul>
                         <li><a href="solar.html">Capteur Solaire</a></li>
                         <li><a href="piezo.html">Piezoélectricité</a></li>
-                        <li><a href="seebeck.html">L'effet seebeck</a></li>
+                        <li><a href="seebeck.html">L'effet Seebeck</a></li>
                     </ul>
                 </li>
                 <li><a href="journal.html">Carnet de Bord</a></li>
