correction de fautes

--- a/seebeck.html
+++ b/seebeck.html
@@ -150,9 +150,13 @@
 
         <h3>Applications :</h3>
 
-        <h4>Thermostat :</h4>
+        <h4>Thermostat d'un radiateur à eau chaude :</h4>
 
-        <p></p>
+        <p>Dans cette application, on utiliserait un module à effet Seebeck en contact avec un radiateur non électrique (à eau chaude) pour alimenter un thermostat électronique.</p>
+
+        <h4>Bracelets connectés (type fitbit) :</h4>
+
+        <p>Dans cette application, on utiliserait un module à effet Seebeck utilisant la chaleur du corps d'un sportif pour alimenter son bracelet électronique.</p>
 
     </section>
     <hr/>
