--- a/journal.html
+++ b/journal.html
@@ -72,10 +72,10 @@
             <h4>Objectifs :</h4>
             <p>Tester la faisabilité de faire chauffer de l’eau avec la lumière.</p>
             <h4>Déroulement :</h4>
-            <p>Nous tentons d’utiliser 4 lampes halogènes de 150w pour reproduire une partie de la lumière du Soleil. Après allumage des lampes, nous constatons une élévation de 10°C au niveau sur la température. Utilisation d’aluminium comme miroirs disposés,
+            <p>Nous tentons d’utiliser 4 lampes halogènes de 150w pour reproduire une partie de la lumière du Soleil. Après allumage des lampes, nous constatons une élévation de la température de l'eau de 10°C. Pour cela, nous avons utilisé de l’aluminium comme miroirs disposés
                 autour des lampes pour concentrer les rayons lumineux et ainsi augmenter la chaleur produite. </p>
             <h4>Conclusion :</h4>
-            <p>On peut effectivement augmenter la température de l’eau à l’aide de la lumière, mais il nous faut une très grosse source d'énergie comme le Soleil. Or nous somme en automne et les rayons de ce derniers sont moins puissants. De plus, nous avons
+            <p>On peut effectivement augmenter la température de l’eau à l’aide de la lumière, mais il nous faut une très grosse source d'énergie comme le Soleil. Or nous somme en automne et les rayons de ce dernier sont moins puissants. De plus, nous avons
                 jugé notre sujet trop classique. Nous allons essayer d’en trouver un nouveau.
             </p>
         </div>
@@ -83,7 +83,7 @@
         <div>
             <h3>Jour 3 : 4/10/2017</h3>
             <h4>Objectifs :</h4>
-            <p>Trouver un nouveau sujet, le notre est bateau.</p>
+            <p>Trouver un nouveau sujet, le notre est "bateau".</p>
             <h4>Déroulement :</h4>
             <p>Réflexion sur un nouveau sujet et une nouvelle problématique. Nous vérifions si le sujet semble réalisable d’un point de vue expérimental. Nous pensons avoir trouvé notre sujet et notre problématique.</p>
             <h4>Conclusion :</h4>
@@ -95,11 +95,11 @@
             <h4>Objectifs :</h4>
             <p>Demander le matériel nécessaire au laborantin.</p>
             <h4>Déroulement :</h4>
-            <p>Le laborantin nous a dit que notre expérience est trop compliquée pour la réaliser au loquidy. Nous avons donc décidé de changer de sujet une nouvelle fois. Nous pensons partir sur le “energy harvesting”. C’est à dire utiliser différents sources
+            <p>Le laborantin nous a dit que notre expérience est trop compliquée pour la réaliser au loquidy. Nous avons donc décidé de changer de sujet une nouvelle fois. Nous pensons partir sur le “energy harvesting”. C’est à dire utiliser différentes sources
                 d’énergie comme : des différences de températures, l'énergie de la marche d’une personne, la lumière d’une pièce pour alimenter un objet connecté ( ici un capteur connecté). Notre nouvelle problématique est donc “Comment alimenter des
                 objets connectés sans batteries ?”</p>
             <h4>Conclusion:</h4>
-            <p>Nous avons une problématique, nous allons la faire valider par nos professeurs au prochain cours comme nous avons été trop long. Ensuite, nous allons commencer à rassembler le matériel nécessaire à la réalisation de notre projet.
+            <p>Nous avons une problématique, nous allons la faire valider par nos professeurs au prochain cours. Ensuite, nous allons commencer à rassembler le matériel nécessaire à la réalisation de notre projet.
             </p>
         </div>
         <hr/>
@@ -108,15 +108,15 @@
             <h4>Objectifs :</h4>
             <p>Voir avec le laborantin le matériel à notre disposition pour nos expériences et terminer la séance avec nos expériences prêtes.</p>
             <h4>Déroulement :</h4>
-            <p>Nous avons choisi le matériel que nous allons utiliser et celui que nous allons acheter par nos propres moyens pour nos expérience. Nous acheterons des cellules piézoélectriques et un module peltier, le Loquidy fournira la cellule photovoltaïque.</p>
+            <p>Nous avons choisi le matériel que nous allons utiliser et celui que nous allons acheter par nos propres moyens pour nos expériences. Nous acheterons des cellules piézoélectriques et un module à effet Seebeck, le Loquidy fournira la cellule photovoltaïque.</p>
             <h4>Conclusion :</h4>
-            <p>Nous effectuerons une série d'au moins, 3 expériences différentes, afin de tester différentes manières permettants d’extraire de l’énergie du milieu ambiant (par exemple avec des cellules piezo, un module peltier, et à partir du solaire).
-                Notre but est faire un tableau comparant nos sources d'énergies (rendement, coût, Pmax, difficulté à mettre en oeuvre...)</p>
+            <p>Nous effectuerons une série d'au moins 3 expériences différentes, afin de tester différentes manières permettants d’extraire de l’énergie du milieu ambiant (par exemple avec des cellules piezo, un module à effet Seebeck, et à partir du solaire).
+                Notre but est faire un tableau comparant nos sources d'énergies (rendement, coût, puissance maxi, difficulté à mettre en oeuvre...)</p>
         </div>
         <hr/>
         <div>
             <h3>Jour 6 : 11/10/2017</h3>
-            <h4>Objectif :</h4>
+            <h4>Objectifs :</h4>
             <p>Nous avons maintenant des cellules piezos et une centrale latispro. Nous allons essayer de prendre des mesures et de nous familiariser avec le logiciel.</p>
             <h4>Déroulement :</h4>
             <p>Nous avons récupéré une cellule piézoélectrique que nous avons branché à un multimètre pour mesurer la tension et l’intensité générée, puis nous avons utilisé la station Latis afin de tracer un graphique. En attendant de nouvelles expériences,
@@ -126,7 +126,7 @@
         <hr/>
         <div>
             <h3>Jour 7 : 7/11/2017</h3>
-            <h4>Objectif :</h4>
+            <h4>Objectifs :</h4>
             <p>Tracer la courbe reliant le poid d’une personne à l’énergie produite par les cellules piezo. Déterminer si une zone de pied est plus favorable à la production d’énergie qu’une autre.</p>
             <h4>Déroulement :</h4>
             <p>Nous avons commencé notre expérience. Nous avons fixé des cellules piézo-électriques sous les pieds d’une personne et mesuré l’énergie produite par la marche d’une personne. Mais nous nous sommes trompés et avons fait nos mesures en volt à
@@ -135,8 +135,8 @@
         <hr/>
         <div>
             <h3>Jour 8 : 14/11/2017</h3>
-            <h4>Objectif :</h4>
-            <p>Tracer la courbe reliant le poid d’une personne à l’énergie produite par les cellules piezo. pour cela nous allons utiliser un Bilal en état de marche.</p>
+            <h4>Objectifs :</h4>
+            <p>Tracer la courbe reliant le poid d’une personne à l’énergie produite par les cellules piezo. pour cela nous allons utiliser un "Bilal" en état de marche.</p>
             <h4>Matériel :</h4>
             <p>x1 Cellule Piezo<br/> x1 Centrale Latis<br/> x1 Multimètre<br/> x1 Résistance de 10Ω<br/> x1 Bilal</p>
             <h4>Déroulement :</h4>
@@ -149,7 +149,7 @@
         <hr/>
         <div>
             <h3>Jour 9 : 21/11/2017</h3>
-            <h4>Objectif :</h4>
+            <h4>Objectifs :</h4>
             <p>Détermination d’un poid de référence (en N) et d’une surface de référence (en m<sup>2</sup>), et donc une pression de référence (en Pa). Ce qui nous permet d'extrapoler l’intensité produite par n’importe quel poid sur une cellule piezo-électrique
                 d’une surface donnée.</p>
             <h4>Matériel :</h4>
@@ -177,46 +177,46 @@
         <div>
             <h3>Jour 11 : 12/12/2017</h3>
             <h4>Objectifs :</h4>
-            <p>Etablir une fonction qui à toute différence de température ∆T (en Kelvin) associe une tension U (en Volt). Avec cette formule, nous allons être en mesure de calculer l’intensité dans notre circuit.</p>
+            <p>Tester un module à effet Seebeck pour établir une fonction qui à toute différence de température ∆T (en Kelvin) associe une tension U (en Volt). Avec cette formule, nous allons être en mesure de calculer l’intensité dans notre circuit.</p>
             <h4>Matériel:</h4>
-            <p>x1 module a effet Peltier <br/>x1 chauffage<br/> x1 bécher <br/>De l’eau du robinet <br/>x1 multimètre <br/>x1 dissipateur thermique (puissance max dissipé 65W) => Ventirad de PC <br/>x1 résistance de 10Ω</p>
+            <p>x1 module a effet Seebeck <br/>x1 chauffage<br/> x1 bécher <br/>De l’eau du robinet <br/>x1 multimètre <br/>x1 dissipateur thermique (puissance max dissipé 65W) => Ventirad de PC <br/>x1 résistance de 10Ω</p>
             <h4>Déroulement :</h4>
-            <p>On fait chauffer de l’eau dans un bécher jusqu’à une température plus élevée que celle du milieu ambiant. Ensuite on immerge partiellement une face du module Peltier dans l’eau pour faire chauffer l’une de ses deux faces. On utilise le dissipateur
-                thermique pour refroidir l’autre face du peltier. De cette différence de température naît ainsi un courant électrique. Nous établissons alors un tableau qui, à toute différence de température ∆T, associe la tension U spécifiée en circuit
+            <p>On fait chauffer de l’eau dans un bécher jusqu’à une température plus élevée que celle du milieu ambiant. Ensuite on immerge partiellement une face du module à effet Seebeck dans l’eau pour faire chauffer l’une de ses deux faces. On utilise le dissipateur
+                thermique pour refroidir l’autre face du module à effet Seebeck. De cette différence de température naît ainsi un courant électrique. Nous établissons alors un tableau qui, à toute différence de température ∆T, associe la tension U spécifiée en circuit
                 ouvert. Nous pouvons alors tracer un graphique de ces résultats. Il en résulte une droite, passant par l’origine, dont nous pouvons calculer le coefficient directeur appelé coefficient Seebeck. Par la suite, nous pouvons brancher le module
                 en série avec une résistance de 10Ω, et grâce à la relation \(U=R\times I\) , en déduire l’intensité parcourant le circuit.</p>
             <h4>Résultats :</h4>
             <img style="width:50%;margin-left:20px;" src="graph/seebeck/dtu.png" />
-            <p>En plaçant nos points sur un repère orthonormé, nous obtenons une droite passant par l’origine du repère. La droite représente la fonction qui à toute différence de température (en K) aux faces de notre peltier, associe une tension en V. Avec
+            <p>En plaçant nos points sur un repère orthonormé, nous obtenons une droite passant par l’origine du repère. La droite représente la fonction qui à toute différence de température (en K) aux faces de notre module à effet Seebeck, associe une tension en V. Avec
                 une résistance de 10Ω, pour une tension de 1mV, on calcule une intensité de 100mA, comme \(U=R\times I\) nous pouvons calculer une intensité pour n’importe quelle tension. Cependant ce résultat est théorique car il ne prend pas en compte
-                la résistance interne de notre module peltier qui est relativement élevée (elle est la cause du mauvais rendement).</p>
+                la résistance interne de notre module à effet Seebeck qui est relativement élevée (elle est la cause du mauvais rendement).</p>
         </div>
         <hr/>
         <div>
             <h3>Jour 12 : 18/12/2017</h3>
-            <h4>Objectif :</h4>
-            <p>Affiner nos mesures de tension aux bornes du module peltier et calculer l’intensité du circuit. Nous mesurerons le voltage généré par notre module pour vérifier si nos calculs sont justes.</p>
+            <h4>Objectifs :</h4>
+            <p>Affiner nos mesures de tension aux bornes du module à effet Seebeck et calculer l’intensité du circuit. Nous mesurerons le voltage généré par notre module pour vérifier si nos calculs sont justes.</p>
             <h4>Matériel :</h4>
-            <p>x1 Chauffage<br/>x1 Module à effet Peltier<br/> x1 bécher<br/>De l’eau du robinet<br/>x1 multimètre<br/>x1 dissipateur thermique (puissance max dissipé 65W) => Ventirad de PC<br/>x1 résistance de 10Ω</p>
+            <p>x1 Chauffage<br/>x1 Module à effet Seebeck<br/> x1 bécher<br/>De l’eau du robinet<br/>x1 multimètre<br/>x1 dissipateur thermique (puissance max dissipé 65W) => Ventirad de PC<br/>x1 résistance de 10Ω</p>
             <h4>Déroulement :</h4>
             <p>Même chose que la semaine précédente, nous allons mesurer de nouvelles tensions pour affiner le graphique. Ensuite, en branchant un ampèremètre en série dans le circuit ainsi qu’une résistance de 10Ω, nous allons calculer la résistance interne
-                du module peltier, ce qui nous permettra de trouver une fonction qui à toute tension U associe une intensité I. Nous utiliserons la relation \(U=R\times I\).</p>
+                du module à effet Seebeck, ce qui nous permettra de trouver une fonction qui à toute tension U associe une intensité I. Nous utiliserons la relation \(U=R\times I\).</p>
             <h4>Résultats :</h4>
-            <p>On sait que \(R=10+x\) où \(x\) représente la résistance interne du module peltier et 10 la résistance déjà présente dans le circuit. De plus, nous pouvons mesurer l’intensité avec l’ampèremètre et la tension avec le voltmètre. On en déduit
+            <p>On sait que \(R=10+x\) où \(x\) représente la résistance interne du module à effet Seebeck et 10 la résistance déjà présente dans le circuit. De plus, nous pouvons mesurer l’intensité avec l’ampèremètre et la tension avec le voltmètre. On en déduit
                 les relations suivantes : \(I = {U\over R} \Leftrightarrow I = {U\over 10+x} ⇔ x = {U\over I}-10\) Ensuite, nous relevons la tension aux bornes du module et l’intensité du courant dans le circuit, on trouve : I = 0,019 Aet U = 0,36 V On
-                en déduit la résistance interne du module peltier qui est donc de 8.37Ω. La résistance totale du circuit est donc de 10+8.37 soit 18.37Ω. Comme \(I={U\over R}\), et que R est constant, nous avons trouvé la fonction qui à toute tension
-                mesurée au bornes du module peltier associe une intensité électrique.
+                en déduit la résistance interne du module à effet Seebeck qui est donc de 8.37Ω. La résistance totale du circuit est donc de 10+8.37 soit 18.37Ω. Comme \(I={U\over R}\), et que R est constant, nous avons trouvé la fonction qui à toute tension
+                mesurée au bornes du module à effet Seebeck associe une intensité électrique.
             </p>
         </div>
         <hr/>
         <div>
 
             <h3>Jour 13 : 18/12/2017</h3>
-            <h4>Objectif :</h4>
+            <h4>Objectifs :</h4>
             <p>Déterminer si l'énergie solaire est une d’energie viable pour un objet connecté.</p>
             <h4>Matériel :</h4>
             <p>
-                Un rhéostat<br/> Une lampe de 40w<br/> un variateur de puissance secteur<br/> Un luxmètre<br/> 2 multimètre<br/>
+                Un rhéostat<br/> Une lampe de 40w<br/> Un variateur de puissance secteur<br/> Un luxmètre<br/> 2 multimètres<br/>
             </p>
             <h4>Déroulement :</h4>
             <p>Les panneaux solaires ont un point ou la résistance de leur charge leur permet d’atteindre leur maximum d’efficacité. Nous allons donc chercher la valeur de cette résistance dans un premier temps.</p>
@@ -230,10 +230,10 @@
             <h4>Résultats :</h4>
             <table border="1">
                 <tr>
-                    <th>Puissance (en W)</th>
-                    <th>Intensité (en mA)</th>
-                    <th>Tension (en V)</th>
-                    <th>Résistance (en &Omega;)</th>
+                    <th>Puissance<br/>(en W)</th>
+                    <th>Intensité<br/>(en mA)</th>
+                    <th>Tension<br/>(en V)</th>
+                    <th>Résistance<br/>(en &Omega;)</th>
                 </tr>
 
                 <tr>
@@ -323,10 +323,10 @@
             <h4>Résultats</h4>
             <table border="1">
                 <tr>
-                    <th>Tension (en V)</th>
-                    <th>Intensité (en mA)</th>
-                    <th>Intensité Lumineuse (en Lux)</th>
-                    <th>Puissance (en W)</th>
+                    <th>Tension<br/>(en V)</th>
+                    <th>Intensité<br/>(en mA)</th>
+                    <th>Intensité Lumineuse<br/>(en Lux)</th>
+                    <th>Puissance<br/>(en W)</th>
                 </tr>
                 <tr>
                     <td>0,27</td>
