--- a/presentation.html
+++ b/presentation.html
@@ -56,22 +56,24 @@
 
         <h3>Problématique</h3>
 
-        <p>Après une semaine laborieuse de recherche (comme vous pouvez le constater dans l'onglet carnet de bord), nous avons finalement décidé de travailler sur l'extraction de l'énergie du milieu ambiant. Nous avons donc formulé cette problématique :</p>
+        <p>Après une semaine laborieuse de recherche (comme vous pouvez le constater dans l'onglet carnet de bord), nous avons finalement décidé de travailler sur l'extraction de l'énergie du milieu ambiant, ou "energy harvesting". Nous avons donc formulé
+            cette problématique :</p>
 
         <h4 id="pb">Comment peut-on rendre les objets connectés électriquement autonomes ?</h4>
 
         <h3>L'énergie et les objets connectés</h3>
 
         <p>Le nombre d'objets connectés est en constante augmentation. De votre téléphone à votre montre en passant par votre réfrigérateur, ils sont partout. Nous sommes de plus en plus nombreux à en avoir et nous en avons de plus en plus par personne (selon
-            l'institut GFK, on estime leur nombre à 30 par foyer en 2030). Aussi, les chargeurs se multiplient et garder tous ces objets connectés chargés va devenir de plus en plus problématique. De plus, ces objets utilisent des batteries au lithium
-            qui sont très peu recyclées. Il faut donc trouver des moyens de créer de l'énergie constamment, afin de ne plus avoir à les charger. L'objectif de ce TPE est de donner des éléments de réponse à ce problème.</p>
+            l'institut GFK, on estime leur nombre à 30 par foyer en 2030). Aussi, les chargeurs se multiplient et alimenter tout ces objets connectés va devenir de plus en plus problématique. En effet, ces objets utilisent des batteries au lithium qui
+            posent un certain nombre de problèmes comme vous pourrez le voir par la suite. Il faut donc trouver des moyens de créer de l'énergie propre en continu, afin de ne plus avoir à les charger et donc pouvoir se passer de batteries. L'objectif
+            de ce TPE est de donner des éléments de réponse à ce problème.</p>
         <hr/>
         <h3>Le problème du Lithium</h3>
 
-        <p class="prestext">Comme dit ci-dessus, les objets connectés utilisent massivement les batteries au lithium. Or, cela a de nombreux inconvénients. En plus d'être rare, l'extraction de ce métal est très polluante du fait de l'utilisation d'eau qui va ensuite contaminer
-            l'environnement. Ce n'est pas le seul problème, en effet, les batteries au lithium sont très peu (voir pas du tout) recyclables, ce qui en font des déchets toxiques supplémentaires polluant la nature. Enfin le lithium est un élément alcalin
-            très réactif. Par conséquent les batteries au lithium sont inflammables et peuvent exploser si elles sont mal utilisées. Pour toutes ces raisons, il faut chercher de nouvelles solutions, plus propres, pour alimenter les objets connectés, c'est
-            ce que nous allons faire ici en envisageant 3 solutions possibles au problème.</p>
+        <p class="prestext">Comme dit ci-dessus, les objets connectés utilisent massivement les batteries au lithium. Or, cela a de nombreux inconvénients. En plus d'être rare, son extraction est très polluante du fait de l'utilisation d'eau qui une fois utilisée va contaminer
+            l'environnement. Ce n'est pas le seul problème, en effet, les batteries au lithium sont très peu (voir pas du tout) recyclables, ce qui en font des déchets toxiques supplémentaires polluant la nature, et dangereux pour la faune et la flore.
+            Enfin le lithium est un élément alcalin très réactif. Par conséquent les batteries au lithium sont inflammables et peuvent exploser si elles sont mal utilisées, ce qui peut les rendre dangereuses (ex: le Boeing 787 et ses batteries au lithium).
+            Pour toutes ces raisons, il faut chercher de nouvelles solutions, plus propres, pour alimenter les objets connectés, c'est ce que nous allons faire ici en envisageant 3 solutions possibles au problème.</p>
 
         <img class="presimg" src="ionexploding.jpg" />
         <hr/>
@@ -83,9 +85,9 @@
             <br/><sub>Source : <a target="_blank" href="http://www.luxol.fr/projet-toiture-solaire/14-effet-photovoltaique.html">http://www.luxol.fr/</a></sub></p>
         <img class="presimg" src="photovolt.png" />
         <h4> Exemple d'application :</h4>
-        <p class="prestext">C'est une solution classique et connue de tous mais qui reste très efficace. On pourrait imaginer un tout petit panneau solaire permettant de récupérer suffisamment d'énergie pour alimenter un objet connecté de temps en temps. Une autre solution
-            serait de prendre un plus gros panneau solaire afin de l'alimenter continuellement. L'avantage d'un objet autonome est que, la plupart du temps, il ne demande pas énormément d'énergie. L'objet pourrait même être en intérieur du moment qu'il
-            reçoit assez de lumière.</p>
+        <p class="prestext">C'est une solution classique et connue de tous mais qui reste très efficace avec de nombreuses applications. Il est donc tout naturel de commencer par cette solution. Comme application, nous pourrions imaginer un tout petit panneau solaire permettant
+            de récupérer suffisamment d'énergie pour alimenter un objet connecté de temps à autre. Une autre solution serait de prendre un plus gros panneau solaire afin de l'alimenter continuellement. L'avantage d'un objet connecté autonome est que,
+            la plupart du temps, il ne demande pas beaucoup d'énergie. L'objet pourrait même se situer en intérieur du moment qu'il reçoit assez de lumière.</p>
 
 
         <hr/>
@@ -97,8 +99,8 @@
         <p class="prestext">"La piézoélectricité est la propriété que possèdent certains corps de se polariser électriquement sous l’action d’une contrainte mécanique et réciproquement de se déformer lorsqu’on leur applique un champ électrique."<br/><sub>Source : <a target="_blank" href="http://www.wikipedia.org/wiki/Piézoélectricité">http://www.wikipedia.org/</a></sub></p>
         <img class="presimg" src="https://upload.wikimedia.org/wikipedia/commons/c/c4/SchemaPiezo.gif" />
         <h4> Exemple d'application :</h4>
-        <p class="prestext">Les applications de cette énergie sont immenses, et cette énergie trouve tout naturellement sa place dans nos expériences. On peut effectivement imaginer une personne ayant pour pratique sportive la course à pied utiliser l'énergie produite par
-            son activité pour alimenter un bracelet connecté qui se chargerait de collecter les données sur la personne.</p>
+        <p class="prestext">C'est une solution moins connue à notre problème, mais les applications de cette énergie sont pourtant immenses. On peut effectivement imaginer une personne ayant pour pratique sportive la course à pied utiliser l'énergie produite par des cellules
+            piezoélectriques situées dans ses chaussures pour alimenter un bracelet connecté qui se chargerait de collecter les données sur la personne.</p>
 
 
 
@@ -113,8 +115,8 @@
             <br/><sub>Source : <a target="_blank" href="http://www2.ac-lyon.fr/lyc69/descartes/IMG/pdf/07b_-_Effet_Seebeck_-_1OP.pdf">http://www2.ac-lyon.fr</a></sub></p>
         <img class="presimg" src="seebeck.bmp" />
         <h4> Exemple d'application :</h4>
-        <p class="prestext">Il y a de très nombreuses applications possibles pour cette réaction. On pourrait imaginer des bracelets connectés pour le sport, avec une face en contact avec la peau du sportif et l'autre face à l'air libre et qui est donc moins chaude. On pourrait
-            ainsi récupérer l'énergie produite par la chaleur du corps humain. Nous pourrions aussi envisager des modules à effet Seebeck intégrés à des radiateurs non électriques, permettant ainsi d'alimenter une commande électrique.</p>
+        <p class="prestext">Il y a de très nombreuses applications possibles pour cette réaction thermoélectrique. On pourrait imaginer des bracelets connectés pour le sport, avec une face en contact avec la peau du sportif et l'autre face à l'air libre et qui est donc moins
+            chaude. On pourrait ainsi récupérer l'énergie produite par la chaleur du corps humain. Nous pourrions aussi envisager des modules à effet Seebeck intégrés à des radiateurs non électriques, permettant ainsi d'alimenter une commande électrique.</p>
 
     </section>
     <hr/>
