--- a/seebeck.html
+++ b/seebeck.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8" />
     <title>Des objets connectés autonomes</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="favicon.ico" />
     <script src="script/jquery.js"></script>
     <script async src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
 </head>
@@ -54,8 +55,8 @@
 
         <p>
             Le module à effet Seebeck permet de produire de l'énergie à partir d'une différence de température entre les deux faces du module. La face exposée à la plus grande température absorbe la chaleur et l'autre la rejette, ce processus génère un peu d'énergie
-            que l'on peut récupérer.<br/> On peut à l'inverse alimenter le module, il absorbera la chaleur d'un coté et la rejettera de l'autre en fonction du sens du courant. Cependant, ce n'est pas ce que l'on cherche à faire ici (on veut récupérer
-            de l'énergie, pas l'utiliser).<br/>
+            que l'on peut récupérer.<br/> On peut à l'inverse alimenter le module, il absorbera la chaleur d'un coté et la rejettera de l'autre en fonction du sens du courant. Cependant, ce n'est pas ce que l'on cherche à faire ici (on veut
+            récupérer de l'énergie, pas l'utiliser).<br/>
         </p>
 
         <h3>Expériences</h3>
