--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8" />
     <title>Des objets connectés autonomes</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="favicon.ico" />
     <script src="script/jquery.js"></script>
     <script async src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
 </head>
