--- a/journal.html
+++ b/journal.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8" />
     <title>Des objets connectés autonomes</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="favicon.ico" />
     <script src="script/jquery.js"></script>
     <script async src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
 </head>
@@ -72,8 +73,8 @@
             <h4>Objectifs :</h4>
             <p>Tester la faisabilité de faire chauffer de l’eau avec la lumière.</p>
             <h4>Déroulement :</h4>
-            <p>Nous tentons d’utiliser 4 lampes halogènes de 150w pour reproduire une partie de la lumière du Soleil. Après allumage des lampes, nous constatons une élévation de la température de l'eau de 10°C. Pour cela, nous avons utilisé de l’aluminium comme miroirs disposés
-                autour des lampes pour concentrer les rayons lumineux et ainsi augmenter la chaleur produite. </p>
+            <p>Nous tentons d’utiliser 4 lampes halogènes de 150w pour reproduire une partie de la lumière du Soleil. Après allumage des lampes, nous constatons une élévation de la température de l'eau de 10°C. Pour cela, nous avons utilisé de l’aluminium
+                comme miroirs disposés autour des lampes pour concentrer les rayons lumineux et ainsi augmenter la chaleur produite. </p>
             <h4>Conclusion :</h4>
             <p>On peut effectivement augmenter la température de l’eau à l’aide de la lumière, mais il nous faut une très grosse source d'énergie comme le Soleil. Or nous somme en automne et les rayons de ce dernier sont moins puissants. De plus, nous avons
                 jugé notre sujet trop classique. Nous allons essayer d’en trouver un nouveau.
@@ -95,9 +96,9 @@
             <h4>Objectifs :</h4>
             <p>Demander le matériel nécessaire au laborantin.</p>
             <h4>Déroulement :</h4>
-            <p>Le laborantin nous a dit que notre expérience est trop compliquée pour la réaliser au loquidy. Nous avons donc décidé de changer de sujet une nouvelle fois. Nous pensons partir sur le “energy harvesting”. C’est à dire utiliser différentes sources
-                d’énergie comme : des différences de températures, l'énergie de la marche d’une personne, la lumière d’une pièce pour alimenter un objet connecté ( ici un capteur connecté). Notre nouvelle problématique est donc “Comment alimenter des
-                objets connectés sans batteries ?”</p>
+            <p>Le laborantin nous a dit que notre expérience est trop compliquée pour la réaliser au loquidy. Nous avons donc décidé de changer de sujet une nouvelle fois. Nous pensons partir sur le “energy harvesting”. C’est à dire utiliser différentes
+                sources d’énergie comme : des différences de températures, l'énergie de la marche d’une personne, la lumière d’une pièce pour alimenter un objet connecté ( ici un capteur connecté). Notre nouvelle problématique est donc “Comment alimenter
+                des objets connectés sans batteries ?”</p>
             <h4>Conclusion:</h4>
             <p>Nous avons une problématique, nous allons la faire valider par nos professeurs au prochain cours. Ensuite, nous allons commencer à rassembler le matériel nécessaire à la réalisation de notre projet.
             </p>
@@ -108,7 +109,9 @@
             <h4>Objectifs :</h4>
             <p>Voir avec le laborantin le matériel à notre disposition pour nos expériences et terminer la séance avec nos expériences prêtes.</p>
             <h4>Déroulement :</h4>
-            <p>Nous avons choisi le matériel que nous allons utiliser et celui que nous allons acheter par nos propres moyens pour nos expériences. Nous acheterons des cellules piézoélectriques et un module à effet Seebeck, le Loquidy fournira la cellule photovoltaïque.</p>
+            <p>Nous avons choisi le matériel que nous allons utiliser et celui que nous allons acheter par nos propres moyens pour nos expériences. Nous acheterons des cellules piézoélectriques et un module à effet Seebeck, le Loquidy fournira la cellule
+                photovoltaïque.
+            </p>
             <h4>Conclusion :</h4>
             <p>Nous effectuerons une série d'au moins 3 expériences différentes, afin de tester différentes manières permettants d’extraire de l’énergie du milieu ambiant (par exemple avec des cellules piezo, un module à effet Seebeck, et à partir du solaire).
                 Notre but est faire un tableau comparant nos sources d'énergies (rendement, coût, puissance maxi, difficulté à mettre en oeuvre...)</p>
@@ -181,15 +184,15 @@
             <h4>Matériel:</h4>
             <p>x1 module a effet Seebeck <br/>x1 chauffage<br/> x1 bécher <br/>De l’eau du robinet <br/>x1 multimètre <br/>x1 dissipateur thermique (puissance max dissipé 65W) => Ventirad de PC <br/>x1 résistance de 10Ω</p>
             <h4>Déroulement :</h4>
-            <p>On fait chauffer de l’eau dans un bécher jusqu’à une température plus élevée que celle du milieu ambiant. Ensuite on immerge partiellement une face du module à effet Seebeck dans l’eau pour faire chauffer l’une de ses deux faces. On utilise le dissipateur
-                thermique pour refroidir l’autre face du module à effet Seebeck. De cette différence de température naît ainsi un courant électrique. Nous établissons alors un tableau qui, à toute différence de température ∆T, associe la tension U spécifiée en circuit
-                ouvert. Nous pouvons alors tracer un graphique de ces résultats. Il en résulte une droite, passant par l’origine, dont nous pouvons calculer le coefficient directeur appelé coefficient Seebeck. Par la suite, nous pouvons brancher le module
-                en série avec une résistance de 10Ω, et grâce à la relation \(U=R\times I\) , en déduire l’intensité parcourant le circuit.</p>
+            <p>On fait chauffer de l’eau dans un bécher jusqu’à une température plus élevée que celle du milieu ambiant. Ensuite on immerge partiellement une face du module à effet Seebeck dans l’eau pour faire chauffer l’une de ses deux faces. On utilise
+                le dissipateur thermique pour refroidir l’autre face du module à effet Seebeck. De cette différence de température naît ainsi un courant électrique. Nous établissons alors un tableau qui, à toute différence de température ∆T, associe la
+                tension U spécifiée en circuit ouvert. Nous pouvons alors tracer un graphique de ces résultats. Il en résulte une droite, passant par l’origine, dont nous pouvons calculer le coefficient directeur appelé coefficient Seebeck. Par la suite,
+                nous pouvons brancher le module en série avec une résistance de 10Ω, et grâce à la relation \(U=R\times I\) , en déduire l’intensité parcourant le circuit.</p>
             <h4>Résultats :</h4>
             <img style="width:50%;margin-left:20px;" src="graph/seebeck/dtu.png" />
-            <p>En plaçant nos points sur un repère orthonormé, nous obtenons une droite passant par l’origine du repère. La droite représente la fonction qui à toute différence de température (en K) aux faces de notre module à effet Seebeck, associe une tension en V. Avec
-                une résistance de 10Ω, pour une tension de 1mV, on calcule une intensité de 100mA, comme \(U=R\times I\) nous pouvons calculer une intensité pour n’importe quelle tension. Cependant ce résultat est théorique car il ne prend pas en compte
-                la résistance interne de notre module à effet Seebeck qui est relativement élevée (elle est la cause du mauvais rendement).</p>
+            <p>En plaçant nos points sur un repère orthonormé, nous obtenons une droite passant par l’origine du repère. La droite représente la fonction qui à toute différence de température (en K) aux faces de notre module à effet Seebeck, associe une
+                tension en V. Avec une résistance de 10Ω, pour une tension de 1mV, on calcule une intensité de 100mA, comme \(U=R\times I\) nous pouvons calculer une intensité pour n’importe quelle tension. Cependant ce résultat est théorique car il ne
+                prend pas en compte la résistance interne de notre module à effet Seebeck qui est relativement élevée (elle est la cause du mauvais rendement).</p>
         </div>
         <hr/>
         <div>
@@ -202,10 +205,10 @@
             <p>Même chose que la semaine précédente, nous allons mesurer de nouvelles tensions pour affiner le graphique. Ensuite, en branchant un ampèremètre en série dans le circuit ainsi qu’une résistance de 10Ω, nous allons calculer la résistance interne
                 du module à effet Seebeck, ce qui nous permettra de trouver une fonction qui à toute tension U associe une intensité I. Nous utiliserons la relation \(U=R\times I\).</p>
             <h4>Résultats :</h4>
-            <p>On sait que \(R=10+x\) où \(x\) représente la résistance interne du module à effet Seebeck et 10 la résistance déjà présente dans le circuit. De plus, nous pouvons mesurer l’intensité avec l’ampèremètre et la tension avec le voltmètre. On en déduit
-                les relations suivantes : \(I = {U\over R} \Leftrightarrow I = {U\over 10+x} ⇔ x = {U\over I}-10\) Ensuite, nous relevons la tension aux bornes du module et l’intensité du courant dans le circuit, on trouve : I = 0,019 Aet U = 0,36 V On
-                en déduit la résistance interne du module à effet Seebeck qui est donc de 8.37Ω. La résistance totale du circuit est donc de 10+8.37 soit 18.37Ω. Comme \(I={U\over R}\), et que R est constant, nous avons trouvé la fonction qui à toute tension
-                mesurée au bornes du module à effet Seebeck associe une intensité électrique.
+            <p>On sait que \(R=10+x\) où \(x\) représente la résistance interne du module à effet Seebeck et 10 la résistance déjà présente dans le circuit. De plus, nous pouvons mesurer l’intensité avec l’ampèremètre et la tension avec le voltmètre. On
+                en déduit les relations suivantes : \(I = {U\over R} \Leftrightarrow I = {U\over 10+x} ⇔ x = {U\over I}-10\) Ensuite, nous relevons la tension aux bornes du module et l’intensité du courant dans le circuit, on trouve : I = 0,019 Aet U
+                = 0,36 V On en déduit la résistance interne du module à effet Seebeck qui est donc de 8.37Ω. La résistance totale du circuit est donc de 10+8.37 soit 18.37Ω. Comme \(I={U\over R}\), et que R est constant, nous avons trouvé la fonction
+                qui à toute tension mesurée au bornes du module à effet Seebeck associe une intensité électrique.
             </p>
         </div>
         <hr/>
