ADDED CONCLU IN A NUTSHELL LOL

--- a/piezo.html
+++ b/piezo.html
@@ -139,7 +139,7 @@
 
         <p>Nous avons vu grâce à nos expériences que l'on peut en effet produire de l'énergie grâce à des cellules piézoélectriques. Cependant, la cellule testée est trop peu efficace afin d'être utilisée dans le cadre d'un usage personnel (marche). Nous
             pouvons cependant aussi envisager l'utilisation de condensateurs afin d'accumuler de l'énergie pour alimenter de manière ponctuelle un objet connecté.<br/> Pour aller plus loin, nous pourrions imaginer d'autres conditions d'utilisations :
-            par exemple des routes ou même un sol très fréquenté bardé de cellules piézoélectriques. La contrainte mécanique d'une foule ou de plusieurs voitures serait peut-être suffisante afin d'alimenter des objets connectés situés à proximité</p>
+            par exemple des routes ou même un sol très fréquenté bardé de cellules piézoélectriques. La contrainte mécanique d'une foule ou de plusieurs voitures serait peut-être suffisante afin d'alimenter des objets connectés situés à proximité.</p>
 
 
         <!--<h3>Applications :</h3>
