--- a/seebeck.html
+++ b/seebeck.html
@@ -144,10 +144,15 @@
 
 
         <p>
-            De plus, on a \(U = 0.0305&Delta;T\), donc on en déduit \(f(&Delta;T) = 18.37(0.0305&Delta;T)^2\).
+            De plus, on a \(U = 0.0305&Delta;T\), donc on en déduit \(f(&Delta;T) = {(0.0305&Delta;T)^2\over 18.37}\).
         </p>
 
         <p><img src="graph/seebeck/pdt.png" /></p>
+
+        <h3>Conclusion sur l'effet seebeck :</h3>
+
+        <p>Nos expériences nous ont montré que produire de l'énergie grâce à l'effet seebeck est tout à fait possible. Cependant, comme pour l'effet piezoélectrique, le rendement est très mauvais. Cela peut être compensé par l'usage de condensateurs afin
+            d'alimenter un objet connecté de manière ponctuelle.</p>
 
         <h3>Applications :</h3>
 
