--- a/solar.html
+++ b/solar.html
@@ -398,7 +398,10 @@
 
         <img src="graph/sol/pl.png" />
 
-        <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
+        <h3>Conclusion sur l'effet photovoltaïque :</h3>
+
+        <p>Nos expériences nous ont montré que l'utilisation de l'effet photovoltaïque est bel et bien une solution pour alimenter un objet connecté en continu. Cependant, cet effet est conditionné par le bon vouloir du Soleil (nous qui sommes à Nantes en
+            savons quelque chose). Aussi, l'utilisation de condensateurs afin d'alimenter un objet connecté ponctuel semble plus adaptée.</p>
 
         <h3>Applications :</h3>
 
