--- a/presentation.html
+++ b/presentation.html
@@ -26,9 +26,10 @@
                         <li><a href="seebeck.html">L'effet Seebeck</a></li>
                     </ul>
                 </li>
-                <li><a href="journal.html">Carnet de Bord</a></li>
+                <li><a href="conclu.html">Conclusion</a></li>
                 <li><a>Annexes</a>
                     <ul>
+                        <li><a href="journal.html">Carnet de Bord</a></li>
                         <li><a href="biblio.html">Bibliographie</a></li>
                         <li><a href="photos.html">Photos</a></li>
                         <li><a href="graph.html">Graphiques</a></li>
