--- a/conclu.html
+++ b/conclu.html
@@ -55,9 +55,11 @@
     <section id="content">
         <h4 id="pb">Comment peut-on rendre les objets connectés électriquement autonomes ?</h4>
         <h2>Conclusion</h2>
-        <p>Finalement, nous pouvons dire que les solutions au problème du lithium existent. Cependant, ces solutions que nous avons expérimenté le long de ce TPE sont trop spécifiques à des conditions particulières pour régler le problème à eux tout seul,
-            ou alors sont trop peu efficaces pour être considérées comme une vraie solution. Il n'en reste pas moins que le problème du lithium et des objets connectés est un défi écologique et énergétique crucial à relever qui continura de gagner en
-            importance avec les années.</p>
+        <p>Finalement, nous pouvons dire que les solutions au problème du lithium existent. Cependant, ces solutions que nous avons expérimenté le long de ce TPE sont trop spécifiques à des conditions particulières pour régler le problème à eux tout seul
+            (effet photovoltaïque et effet seebeck), ou alors sont trop peu efficaces (effet piezoélectrique) pour être considérées comme une vraie solution. Il n'en reste pas moins que le problème du lithium et des objets connectés est un défi écologique
+            et énergétique crucial à relever qui continura de gagner en importance avec les années, si on ne trouve pas de solutions permettant de se passer de batteries.</p>
+        <br/>
+        <br/>
 
     </section>
     <hr/>
